@@ -20,6 +20,7 @@
 Fixed integer overflow when setting CRLPeriod longer than 596 hours.
 CLI command to import a CA from an existing PKCS12 file (openssl CA).
 Fixed bug where own fp instead of CA fp was written to the database.
+Fixed bug where an administrator could not use the admin GUI if signed by a CA using multiple DC attributes.
 
 3.0.3
 -----
